--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
     <div class="video-card">
         <div class="video-placeholder">
 <video autoplay muted loop playsinline width="100%">
-    <source src="images/video.mp4" type="video/mp4">
+    <source src="https://res.cloudinary.com/dzfujz3gi/video/upload/v1718123456/video.mp4" type="video/mp4">
     Seu navegador não suporta o vídeo.
 </video>
         </div>
