--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
     <div class="video-card">
         <div class="video-placeholder">
 <video autoplay muted loop playsinline width="100%">
-    <source src="https://player.cloudinary.com/embed/?cloud_name=dzfujz3gi&public_id=uglgu2ihsxevzen47pjd&profile=cld-default" type="video/mp4">
+    <source src="images/video.mp4" type="video/mp4">
     Seu navegador não suporta o vídeo.
 </video>
         </div>
