--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Minha Namorada - Dia dos Namorados 💖</title>
+    <title>Para minha Keli 💖</title>
     <meta name="description" content="Um site especial de Dia dos Namorados" />
     <meta name="author" content="Lovable" />
     
@@ -556,8 +556,8 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <h1>Para Você, Meu Amor</h1>
-            <p>Dia dos Namorados 2024 💖</p>
+            <h1>Para Você, Minha princesinha linda</h1>
+            <p>Dia dos Namorados 2025 💖</p>
             <div class="emoji-row">💕 ✨ 🌹 ✨ 💕</div>
         </div>
     </header>
